--- a/style.css
+++ b/style.css
@@ -1,39 +1,103 @@
 html {
-    font-family: sans-serif;
-    background-color: rgb(177, 177, 177);
-    text-color: rgb(27, 24, 24);
+    font-family: 'Cutiv Mono', monospace;
+    background-color: rgb(173, 111, 76);
+    color: rgb(36, 28, 28);
+    max-width: 800px;
+    margin: 12px auto;
 }
 
 .headline {
-    color: white;
-    background-color: rgb(219, 93, 20);
-    height: 44px;
-    font-size: 24px;
+    color: rgb(255, 128, 24);
+    font-family: 'Fugaz One', cursive;
+    font-size: 48px;
     text-align: center;
-    padding: 40px;
+    text-shadow: 0px 6px 18px rgba(27, 24, 24, 0.452);
+    padding: 30px;
+}
+
+button {
+    font-size: 12px;
+    font-family: 'Fugaz One', cursive;
+    color: rgb(36, 28, 28);
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: rgb(182, 68, 40);
+    border-style: none;
+}
+
+#addEmployee {
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 0px;
+    font-size: 24px;
+    font-family: 'Fugaz One', cursive;
+    color: rgb(36, 28, 28);
+    background-color: white;
+}
+
+input {
+    font-family: 'Cutiv Mono', monospace;
+    font-size: 14px;
+    border-style: solid;
+    border-width: 1px;
+    margin: 2px 0px;
+    padding: 3px;
+    background-color: rgb(197, 197, 197);
+}
+
+input::placeholder {
+    font-family: 'Cutiv Mono', monospace;
+    font-size: 14px;
+
+}
+
+.employeeCreator {
+    color: rgb(109, 109, 109);
+    background-color: rgba(197, 197, 197, 0.733);
+    padding: 12px;
+}
+
+.employeeCreator p {
+    text-align: left;
+    margin: 4px auto;
 }
 
 .employeeCreator, .employeeList, .total {
     margin-top: 24px;
 }
 
-.employeeCreator p {
-    text-align: center;
+.employeeList {
+    background-color: rgba(197, 197, 197, 0.733);
 
 }
 
 .sleekTable {
-    border-style: solid;
-    border-color: black;
-    margin: 30px;
-    width: 90%;
+    margin-top: 40px;
+    width: 100%;
 }
 
-.sleekTable td {
+tbody tr:nth-child(odd) {
     background-color:  rgb(160, 160, 160);
+}
+
+thead {
+    font-size: 18px;
+    color: rgb(27, 24, 24);
+}
+
+td {
+    margin: 0px;
 }
 
 .total {
     text-align: right;
     margin: 20px;
+    font-family: 'Fugaz One', cursive;
+    font-size: 24px;
+    text-shadow: 4px 4px 12px rgba(1, 1, 1, .4);
+}
+
+.salary {
+    text-align: right;
 }
