--- a/style.css
+++ b/style.css
@@ -39,28 +39,30 @@ button {
 input {
     font-family: 'Cutiv Mono', monospace;
     font-size: 14px;
-    border-style: solid;
-    border-width: 1px;
+    border-style: none;
     margin: 2px 0px;
     padding: 3px;
-    background-color: rgb(197, 197, 197);
+    background-color: rgb(158, 140, 130);
 }
 
 input::placeholder {
     font-family: 'Cutiv Mono', monospace;
+    color: rgb(82, 67, 65);
     font-size: 14px;
 
 }
 
 .employeeCreator {
-    color: rgb(109, 109, 109);
+    color: rgb(173, 111, 76);
     background-color: rgba(197, 197, 197, 0.733);
     padding: 12px;
 }
 
 .employeeCreator p {
+    font-family: 'Fugaz One', cursive;
+    font-size: 24px;
     text-align: left;
-    margin: 4px auto;
+    margin: 4px 8px;
 }
 
 .employeeCreator, .employeeList, .total {
@@ -78,16 +80,22 @@ input::placeholder {
 }
 
 tbody tr:nth-child(odd) {
-    background-color:  rgb(160, 160, 160);
+    background-color:  rgb(158, 140, 130)
 }
 
 thead {
     font-size: 18px;
     color: rgb(27, 24, 24);
+    padding: 8px;
 }
 
 td {
     margin: 0px;
+}
+
+table {
+    border-spacing: 0px;
+    padding: 12px;
 }
 
 .total {
