--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@ button {
     border-style: none;
 }
 
+button:hover, button:focus {
+    transform: translateY(-2px);
+    box-shadow: 0px 2px 4px rgba(1, 1, 1, .4);
+    color: rgb(255, 128, 24) !important;
+    outline: 0px;
+}
+
+button:active {
+    transform: translateY(2px);
+    border-style: none;
+}
+
 #addEmployee {
     width: 100%;
     margin-top: 8px;
@@ -36,7 +48,13 @@ button {
     background-color: white;
 }
 
+.deleteButton {
+    width: 30px;
+}
+
 input {
+    transition: .2s;
+    transition-timing-function: ease-in-out;
     font-family: 'Cutiv Mono', monospace;
     font-size: 14px;
     border-style: none;
@@ -44,6 +62,17 @@ input {
     padding: 3px;
     background-color: rgb(158, 140, 130);
 }
+
+input:hover {
+    background-color: rgb(207, 138, 82);
+}
+
+input:focus {
+    background-color: rgb(255, 128, 24);
+    outline: 0px;
+}
+
+
 
 input::placeholder {
     font-family: 'Cutiv Mono', monospace;
@@ -56,6 +85,11 @@ input::placeholder {
     color: rgb(173, 111, 76);
     background-color: rgba(197, 197, 197, 0.733);
     padding: 12px;
+    transition: .15s;
+}
+
+.employeeCreator.active {
+    background-color: rgba(197, 197, 197, .85);
 }
 
 .employeeCreator p {
